<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_navy"
    tools:context=".ui.fragments.MovieDetailFragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_movie_poster_bold"
                android:gravity="center_horizontal"
                android:paddingVertical="15dp"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:text="@string/title" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:riv_corner_radius="10dp" />

            <RatingBar
                android:id="@+id/rbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true"
                android:layout_margin="15dp"
                android:theme="@style/RatingBar"
                android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp" >

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_movie_poster_oblique"
                    android:textColor="@color/accepted"
                    android:textSize="34sp"
                    android:text="@string/genre"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvDistributor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_movie_poster_bold"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:text="@string/distributor"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvReleased"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:fontFamily="@font/sf_movie_poster_condensed"
                android:textColor="@color/gray"
                android:textSize="30sp"
                android:text="@string/genre"
                android:textAlignment="textEnd"/>

            <TextView
                android:id="@+id/tvDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:fontFamily="@font/sf_movie_poster"
                android:textColor="@color/gray"
                android:textSize="34sp"
                android:text="@string/director" />

            <TextView
                android:id="@+id/tvStarring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:lines="2"
                android:fontFamily="@font/sf_movie_poster"
                android:textColor="@color/gray"
                android:textSize="30sp"
                android:text="@string/starring" />

            <TextView
                android:id="@+id/tvPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:text="@string/platforms" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/description" />
        </LinearLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavloading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:tint="@color/white"
        app:lottie_rawRes="@raw/movie_loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

</RelativeLayout>